# Skin-Lesion-Segmentation

./: .gitignore  LICENSE  README.md  flake.nix  pyproject.toml  requirements.txt  train.py
configs/: config.yaml
notebooks/: dev.ipynb
skin_lesion_segmentation/: __init__.py
skin_lesion_segmentation/datasets/: __init__.py  augmentation.py  lesion_datamodule.py  lesion_dataset.py  lesion_dataset_with_augementation.py
skin_lesion_segmentation/models/: __init__.py  callbacks.py  lesion_segmentation_module.py  unet.py  unet_modified.py
