[tool.poetry]
name = "skin-lesion-segmentation"
version = "0.1.0"
description = "Skin lesion segmentation using UNet with PyTorch Lightning and Optuna optimization"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.6.0"
torchvision = "^0.21.0"
torchmetrics = "^1.6.2"
pillow = "^11.1.0"
hydra-core = "^1.3.2"
matplotlib = "^3.10.1"
numpy = "^2.2.3"
pandas = "^2.2.3"
optuna = "^4.2.1"
optuna-integration = {extras = ["pytorch-lightning"], version = "^4.2.1"}
loguru = "^0.7.3"
pytorch-lightning = "^2.5.0.post0"
plotly = "^6.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"

[tool.poetry.scripts]
train = "train:main"
optimize = "train:main"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
